cmake_minimum_required(VERSION 2.6)
project(monitor)
if(EXISTS "/usr/bin/g++-7")
	set(CMAKE_CXX_COMPILER /usr/bin/g++-7)
elseif(EXISTS "/usr/bin/g++-8")
	set(CMAKE_CXX_COMPILER /usr/bin/g++-8)
elseif(EXISTS "/usr/bin/g++-9")
	set(CMAKE_CXX_COMPILER /usr/bin/g++-9)
elseif(EXISTS "/usr/bin/g++-10")   
	set(CMAKE_CXX_COMPILER /usr/bin/g++-10)
else()
	set(CMAKE_CXX_COMPILER /usr/bin/g++)
endif()
find_package(Curses REQUIRED)
include_directories(${CURSES_INCLUDE_DIRS})

include_directories(include)
file(GLOB SOURCES "src/*.cpp")

add_executable(monitor ${SOURCES})

set_property(TARGET monitor PROPERTY CXX_STANDARD 17)
if ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "GNU")
        set(CXX_FILESYSTEM_LIBRARIES "stdc++fs")
endif()
target_link_libraries(monitor ${CURSES_LIBRARIES} ${CXX_FILESYSTEM_LIBRARIES})
add_compile_definitions(MODIFIED_UDACITY_CODE)
target_compile_options(monitor PRIVATE -Wall -Wextra -Werror)
